--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,min-width=1200">
     <title>纵行科技</title>
   </head>
-  <body>
+  <body style="position: inherit!important;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
