--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,min-width=1200">
+    <meta name="format-detection" content="telephone=no">
     <title>纵行科技</title>
   </head>
   <body style="position: inherit!important;">
